getLatestByMonitorUrl added
